AB#4268 display v-number

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -162,6 +162,7 @@
           "dob": "Date of birth",
           "phone-number": "Phonenumber",
           "payment": "Payment #",
+          "vnumber": "V-number",
           "fsp": "Financial Service Provider"
         },
         "status": {
