--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
         "ny_MW": "Chonde sankhani chiyankhulo chanu.",
         "om_ET": "Maaloo qooqa keessan filadhaa.",
         "saq_KE": "[Samburu text]",
-        "tuv_KE": "[Turkana text]"
+        "tuv_KE": "Akirimakinit, tetheu akituk kon."
       },
       "result": "Thank you, you have selected {{language}}.",
       "language": {
@@ -109,7 +109,7 @@
         "ny_MW": "Chichewa",
         "om_ET": "Afaan Oromoo",
         "saq_KE": "Samburu",
-        "tuv_KE": "Turkana"
+        "tuv_KE": "Ng'aturkana"
       }
     },
     "select-program": {
