--- a/interfaces/PA-App/src/assets/i18n/tuv_KE.json
+++ b/interfaces/PA-App/src/assets/i18n/tuv_KE.json
@@ -1,2 +1,135 @@
 {
+  "account": {
+    "change-password": "Kulokony password",
+    "delete-account-header": "Kuak password kon kithaki dir aputar akount kon",
+    "delete-account-message": "Iputayong akaunt kon, nibongokini nabo, iputae ngakuroon daang.",
+    "delete-digital-id": "Kiputa akaunt",
+    "delete-fail": "Eeyei ibere aroner, ang'ere akaunt kon akiputar.",
+    "delete-success": "Eputar akaunt kon pii, topudoo tokona.",
+    "enter-password": "A password kon",
+    "logout": "Topudoo"
+  },
+  "connection": {
+    "error-retry": "Eeyei ebere aruner, ithaki abongokin naboo?"
+  },
+  "notification": {
+    "close": "togol",
+    "credential": "A namba a akaunt",
+    "inclusion": "Aanyun nikipeakinere"
+  },
+  "password-toggle": {
+    "hide": "Kua a password",
+    "show": "Kitodiu a password"
+  },
+  "personal": {
+    "consent-question": {
+      "agree": "Achamu ayang",
+      "answer": "Ethoma/eiraa nikokinio ng'akirokan iwoiyo anianyokon. Ayeni atamar ethakio kutumai ng'akirokan sodi ataanyunia aking'arakinio aa ng'aropia.   <br><br>   Ayeni tangai iwolikinete ng'akirokan.   <br><br>   aakitap &quot;<b>achamu ayong</b>&quot; athak yong alomar naking'arakinio aa ng'aropia.   <br><br>   Aa kitap &quotl<b>anger ayong</b>&quot; nathakia ayong alomar naking'arakinio.",
+      "disagree": "Anger ayong",
+      "more-info-personal-information": "Na ng'akiro kang",
+      "question": "Taanyuneia akilipa aking'arakinio nanga ethakitae tocham <strong>loger lowuiyere ng'akiro kon</strong>.   <br /><br />   Kelipit kisoma or topupok loger lokuwuikinere ng'akiro kon."
+    },
+    "create-identity": {
+      "conclusion": "Niajon, ithubak akaunt kon.",
+      "confirm-password": "Tobongok a password",
+      "create-password-explanation": "Tosubak a password a ng'anambai ngoomwon.",
+      "create-username": "Kiwak ng'irora kon daang'",
+      "introduction": "Tosubakinia akaunt kon ithakitae kuwap ng'irotin lo.",
+      "password-too-short": "Kipiak angambai nemekidiko ngomon.",
+      "unequal-passwords": "Password ni ithubak iyong nikwaan, tobong'ok.",
+      "username-not-unique": "Ekiro lo ipiak iyong nigogon, tobongok.",
+      "username-password": "Kiwak ng'irora kon daang' tosubak password."
+    },
+    "enroll-in-program": {
+      "change": "Kulokony ng'akiro kang'",
+      "introduction-information": "Taanyuneia aking'arakinio nianyokon ee rot alo ichaakina echamit ipotori ng'akiro naarai nakon.",
+      "more-info-questions": "Ng'akiro nakon",
+      "please-confirm": "Kop ne eyeia ng'akiro kon. Kitheme tatap temea.",
+      "submit-confirm": "Temea ng'akiro kang"
+    },
+    "handle-proof": {
+      "creating": "Kiinak iyong sua ng'akiro niitemokino akiolikin akiolikin kitheunio iyong anaking'arakinio kana.",
+      "inclusion-status-negative": "Terimakinae thua kotere kithaki alimokin iyong atamar nipedori anyuun aking'arakinio naga. Keya ni nithaki akingita kingitae thua.",
+      "inclusion-status-positive": "Kipiakin iyong Naking'arakino na.",
+      "notify": "Kitaanyuni iyong kiwankitae iyong naking'akino na."
+    },
+    "login-identity": {
+      "incorrect-credentials": "Kiwaakini ng'irora kon daang ka password nikiyeno. Tobongok nabo.",
+      "introduction": "Taanyuneia alomar nakaunt kon, ithaki kipiak ng'irora kon daang kaa password tolumarie tooma.",
+      "supply-password": "A password kon",
+      "supply-username": "Ng'irora kon daang"
+    },
+    "preprinted-qrcode": {
+      "no": "A a",
+      "yes": "Eee"
+    },
+    "registration-summary": {
+      "no-validation-conclusion": "Niajok. Arumur aking'iro kon tokana.   <br><br>   Iyanyuni SMS tokana ana namba a diit aniputuni iyong kilimokinit aking'iro kon.   <br><br>   Kilimokinio iyong kiyanyunit alotooma ng'irwa ng'itomon ka ngoomon.   <br><br>   Ikoi lo ekithid tokona."
+    },
+    "select-fsp": {
+      "attributes": {
+        "error": "Iyei ibere aruner, tobongok nabo.",
+        "introduction": "Ana lolom kana kithaki nugu",
+        "success": "Niajok. Kikeshak ng'akirokon."
+      },
+      "conclusion": "Niajokon. Kitheun iyong '{{name}}'.",
+      "introduction": "Tolimu eger lo ithakia aking'arakinio kitheun iyong ana kigero kana."
+    },
+    "select-language": {
+      "result": "Niajokon. Kitheun iyong {{language}}."
+    },
+    "select-program": {
+      "introduction": "Idimit akitumiar a app na akilipunea aking'arakinio. Arimatoi tethek alo kop kane.",
+      "more-info-programs": "Na aking'arakino kana",
+      "no-published-programs": "Emamam tokana ibore eyei, tobongu nege achakwar."
+    },
+    "set-notification-number": {
+      "conclusion-skipped": "Nimekina iyong a namba nikithuroria iyong. Iliwor ilomari tomaa a app na tanyunea ng'akiro.",
+      "conclusion-submitted": "Niajokon. Kitaanyuni ekoi tokana ana namba kana: {{phone}}",
+      "input-label": "A namba a diit kon imorikina ka namba a kop yok. Ikwanikin kona {{phoneNumberExample}}",
+      "introduction1": "Idimit kiwak a namba kon.",
+      "introduction2": "Kitumiari naga akiyaanyun iyong nkoyo ka kwar nidimia taa aking'arakino.",
+      "introduction3": "Ani pe kiwak iyong a namba kon ewori ilomari toma na app na tanyunea nkoiyo.",
+      "introduction4": "Alidaun aking'arakino na eputata a namba kon.",
+      "skip": "Kiporoo",
+      "submit": "Temea a namba a diit",
+      "validation": {
+        "phone-number": "Nechoikina thua a namba gina, kitenea tobongok nabo."
+      }
+    },
+    "signup-signin": {
+      "create-id": "Tothubak akaunt",
+      "introduction": "Taanyuna akilipa aking'arakino naga, eshamit etigit akaunt. Tothubak akaunt kitumia nagorot thek.",
+      "login-id": "Kitumia akaunt kang'"
+    }
+  },
+  "q-and-a-set": {
+    "validation": {
+      "date": "Kwani iwakina iyong ng'irwa lokidounere nejok. Ejok iwakini kona 31-12-1970. Ethekin a kwar, elep ke ekaru.",
+      "generic-error": "Nikidumit asubakin ng'akiro niwak iyong. Kitheme tobongok.",
+      "number": "Ng'akiro niwak iyong echamit erai ng'anambai. Tobongok nabo.",
+      "phone-number": "Nikidumit ayenun a namba na. Tobongok nabo.",
+      "required": "Ithakio tatash ibere niking'istae. Tobongok nabo."
+    }
+  },
+  "qr-scanner": {
+    "close": "Togol",
+    "error-generic": "Iyei ibere aruner."
+  },
+  "shared": {
+    "cancel-button": "Totub",
+    "close-button": "Togol",
+    "more-info": "Kisoma torumoo...",
+    "submit-button": "Temea"
+  },
+  "speak-text": {
+    "loading": "Ebunit",
+    "pause": "Kitowuo",
+    "play": "Kitoboliak"
+  },
+  "tabs": {
+    "account": "Akaunt",
+    "community": "Ebuku",
+    "you": "Iyong"
+  }
 }
