AB#3924 Add translations for Samburu

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -100,7 +100,7 @@
         "en": "Please select your language.",
         "ny_MW": "Chonde sankhani chiyankhulo chanu.",
         "om_ET": "Maaloo qooqa keessan filadhaa.",
-        "saq_KE": "[Samburu text]",
+        "saq_KE": "Enjere tegelu ng'ituk ino.",
         "tuv_KE": "Akirimakinit, tetheu akituk kon."
       },
       "result": "Thank you, you have selected {{language}}.",
