--- a/interfaces/PA-App/src/assets/i18n/saq_KE.json
+++ b/interfaces/PA-App/src/assets/i18n/saq_KE.json
@@ -1,2 +1,139 @@
 {
+  "account": {
+    "change-password": "Mbelekenya password",
+    "delete-account-header": "Tipika password ino tanaa isip ajo iyeu nimputa akount ino.",
+    "delete-account-message": "Tini mputa akaunt ino, mintoki arinyokino, nepoiyei lomon linono",
+    "delete-digital-id": "Mputa akaunt",
+    "delete-fail": "Keeyetae ntoki naitaroiye, meiputaroi akaunt ino",
+    "delete-success": "Eiputaru tata akaunt ino tata, mpungo tata",
+    "enter-password": "Password ino",
+    "logout": "Mpungo"
+  },
+  "connection": {
+    "error-retry": "Ketii ntoki nataroiye, iyeu nisaan aitoki?"
+  },
+  "notification": {
+    "close": "Nkeno",
+    "credential": "Namba e akaunt",
+    "inclusion": "Etumoki nikipikeki"
+  },
+  "password-toggle": {
+    "hide": "Sudoi password",
+    "show": "Ntodolu password"
+  },
+  "personal": {
+    "consent-question": {
+      "agree": "Atashamaie",
+      "answer": "I soma/aininingwa nekoni lomon lainen teeisudori teserian, kaiyelo ajo, keiyeuni nerewi lomon lainen peiye atum reto ee silingini.   <br><br>   Kaiyelo lutungana loodol lomon lainen.   <br><br>   Tenaiseiye &quo;<b>Atashamaie</b>&quot; a tengelua ajing inia reto.   <br><br>   Teneasei &quot;<b>Masham</b>&quot; a tengelua ajo mayeu najing inia reto. ",
+      "disagree": "Masham",
+      "more-info-personal-information": "Loipirta lomon lainen",
+      "question": "Pi iyou ana reto lasima pii eshamaa <strong>ninkinko pii kisudoo lomon linono</strong>.   <br /><br />   Enjere soma tanaa nining'o nikinko tini kisudoo lomon linono"
+    },
+    "create-identity": {
+      "conclusion": "Aiiya, intibira akaunt ino.",
+      "confirm-password": "Ngila password",
+      "create-password-explanation": "Ntibira password naata nambai ongwan",
+      "create-username": "Tipika ng'arn inono pookin",
+      "introduction": "Pii intibir akaunt ino Keishakino pii idip Kuna oito",
+      "local": {
+        "conclusion": "Aiiya, intibira Digital ID ino.",
+        "create-password-only": "Password ino",
+        "introduction": "Pii intibir Digital ID ino Keishakino pii idip Kuna oito"
+      },
+      "password-too-short": "Tipika nambai nemegiru ongwan",
+      "unequal-passwords": "Password nintibira menyunyuk. Ngila",
+      "username-not-unique": "Ngarna nitipika megol. Ngila",
+      "username-password": "Tipika ng'arn inono pooki nitibir password"
+    },
+    "enroll-in-program": {
+      "change": "Mbelekenya lomon lainen",
+      "introduction-information": "Pii itum reto naishakino oo tengoitei naishakino, ikiyeu lomon lekimpirita",
+      "more-info-questions": "Loipirta lomon lainen",
+      "please-confirm": "Lokulo lomon linono tene te abori. Ngurai nisei meshomo",
+      "submit-confirm": "Terewa lomon lainen"
+    },
+    "handle-proof": {
+      "creating": "Ijoo iyo lomon linono laitosha pii kidol tanaa ikingeluni tijinga ana reto",
+      "inclusion-status-negative": "Tapaliki iyoo amu mitum ana reto. Tanaa keyatae niyeu niparu tooshoki iyoo.",
+      "inclusion-status-positive": "Ikitipikaki atua ana reto",
+      "notify": "Ikiliki iye tanaa ikitipikaki atua ana reto"
+    },
+    "login-identity": {
+      "incorrect-credentials": "Teneitushuli ng'arn ninono pookin oo password nishooie mikiyelouni. Ngila aitoki.",
+      "introduction": "Pi intumia akaunt ino keyeinu nipik ng'arn inono pooki oo passsward pii injing atua.",
+      "supply-password": "Password ino",
+      "supply-username": "Ng'arn inono pookin"
+    },
+    "preprinted-qrcode": {
+      "no": "a a",
+      "yes": "Ee"
+    },
+    "registration-summary": {
+      "no-validation-conclusion": "Ashe. Eedipe nkigeroto ino.   <br><br>   Itumu sms te namba ee simu ninjoie tangata dorop nikintodol ajo ingero.   <br><br>   Ikini ana kingerore ataatua mperot tomon ongwan tanaa impaulua.   <br><br>   Ele nkilikwai le mwisho tanakata."
+    },
+    "select-fsp": {
+      "attributes": {
+        "error": "Keitoki nataroiye. Ng'ila aitoki.",
+        "introduction": "Tana paash tata, keiyeuni kuna",
+        "success": "Ashe. Kintegelita lomon linono."
+      },
+      "conclusion": "Ashe. Kitegeluaki '{{name}}'.",
+      "introduction": "Enjere tegelu nigikunakini ana reto tanaaku igeluno."
+    },
+    "select-language": {
+      "result": "Ashe. Kitegeluaki '{{language}}'."
+    },
+    "select-program": {
+      "introduction": "Idim nitumia ana app ayere reto. Enjere nchaguai tene te abori.",
+      "more-info-programs": "Naipirita ana reto",
+      "no-published-programs": "Meiyatae tata ntoki natii, tush ukuje ene ng'ai ng'amata."
+    },
+    "set-notification-number": {
+      "conclusion-skipped": "Etu ingwaki iyo namba pi kishi aicho likilikwa. Teshi tijinga ana app pi itumu lomon.",
+      "conclusion-submitted": "Ashe, itumu lkilikwai tata tana amba: {{phone}}",
+      "input-label": "Namba ino eyata namba enkop ang'. njetu {{phoneNumberExample}}",
+      "introduction1": "Iye nayelo tanaa ipik namba ino.",
+      "introduction2": "Ikitumia ana arewakine iye lkiliku tanaaku ikitipikaki ana reto oo ng'ata nidim atumo reto.",
+      "introduction3": "Tanaaku mipik namba ino e simu, tijinga atua ana app pi itumu lkiliku.",
+      "introduction4": "Tinikibaki mwisho ya na reto nijut namba ino.",
+      "skip": "Terepai",
+      "submit": "Terewa namba we simu",
+      "validation": {
+        "phone-number": "Etu kitomoki inia amba, ntegejuko nigil aitoki."
+      }
+    },
+    "signup-signin": {
+      "create-id": "Ntibira akaunt",
+      "introduction": "Pi emonu ana reto keyere niata akaunt. Enjere ntibira akaunt ashu intumia akaunt ino shaake.",
+      "login-id": "Ntumiai akaunt ai"
+    }
+  },
+  "q-and-a-set": {
+    "validation": {
+      "date": "Kure niguna tinipika ngamata nikitiuaki mara neja. Tipika aikonyi 31-12-1970. Tangasunye mpari, Lapa oo Lari. Ngila aitoki. ",
+      "generic-error": "Iyelo lomon litojo meishakino. Ntibira ntoki aigil.",
+      "number": "Lomon likiparaki keiyeu namba. Ntibira nigil aitoki.",
+      "phone-number": "Mekitumokito ana amba. Ntibira nigil aitoki.",
+      "required": "Keyeuni niwol kulo omon. Ngila aitoki."
+    }
+  },
+  "qr-scanner": {
+    "close": "Nkeno"
+  },
+  "shared": {
+    "cancel-button": "Tudungo",
+    "close-button": "Nkeno",
+    "more-info": "Soma ichu...",
+    "submit-button": "Terewa"
+  },
+  "speak-text": {
+    "loading": "Kelotuta",
+    "pause": "Ntasheiye",
+    "play": "Nguraniye"
+  },
+  "tabs": {
+    "account": "Akaunt",
+    "community": "Loosho",
+    "you": "Iye"
+  }
 }
