Fix typo's in HTML-entities in translations

--- a/interfaces/PA-App/src/assets/i18n/saq_KE.json
+++ b/interfaces/PA-App/src/assets/i18n/saq_KE.json
@@ -24,7 +24,7 @@
   "personal": {
     "consent-question": {
       "agree": "Atashamaie",
-      "answer": "I soma/aininingwa nekoni lomon lainen teeisudori teserian, kaiyelo ajo, keiyeuni nerewi lomon lainen peiye atum reto ee silingini.   <br><br>   Kaiyelo lutungana loodol lomon lainen.   <br><br>   Tenaiseiye &quo;<b>Atashamaie</b>&quot; a tengelua ajing inia reto.   <br><br>   Teneasei &quot;<b>Masham</b>&quot; a tengelua ajo mayeu najing inia reto. ",
+      "answer": "I soma/aininingwa nekoni lomon lainen teeisudori teserian, kaiyelo ajo, keiyeuni nerewi lomon lainen peiye atum reto ee silingini.   <br><br>   Kaiyelo lutungana loodol lomon lainen.   <br><br>   Tenaiseiye &quot;<b>Atashamaie</b>&quot; a tengelua ajing inia reto.   <br><br>   Teneasei &quot;<b>Masham</b>&quot; a tengelua ajo mayeu najing inia reto. ",
       "disagree": "Masham",
       "more-info-personal-information": "Loipirta lomon lainen",
       "question": "Pi iyou ana reto lasima pii eshamaa <strong>ninkinko pii kisudoo lomon linono</strong>.   <br /><br />   Enjere soma tanaa nining'o nikinko tini kisudoo lomon linono"
