--- a/interfaces/PA-App/src/assets/i18n/tuv_KE.json
+++ b/interfaces/PA-App/src/assets/i18n/tuv_KE.json
@@ -24,7 +24,7 @@
   "personal": {
     "consent-question": {
       "agree": "Achamu ayang",
-      "answer": "Ethoma/eiraa nikokinio ng'akirokan iwoiyo anianyokon. Ayeni atamar ethakio kutumai ng'akirokan sodi ataanyunia aking'arakinio aa ng'aropia.   <br><br>   Ayeni tangai iwolikinete ng'akirokan.   <br><br>   aakitap &quot;<b>achamu ayong</b>&quot; athak yong alomar naking'arakinio aa ng'aropia.   <br><br>   Aa kitap &quotl<b>anger ayong</b>&quot; nathakia ayong alomar naking'arakinio.",
+      "answer": "Ethoma/eiraa nikokinio ng'akirokan iwoiyo anianyokon. Ayeni atamar ethakio kutumai ng'akirokan sodi ataanyunia aking'arakinio aa ng'aropia.   <br><br>   Ayeni tangai iwolikinete ng'akirokan.   <br><br>   aakitap &quot;<b>achamu ayong</b>&quot; athak yong alomar naking'arakinio aa ng'aropia.   <br><br>   Aa kitap &quot;<b>anger ayong</b>&quot; nathakia ayong alomar naking'arakinio.",
       "disagree": "Anger ayong",
       "more-info-personal-information": "Na ng'akiro kang",
       "question": "Taanyuneia akilipa aking'arakinio nanga ethakitae tocham <strong>loger lowuiyere ng'akiro kon</strong>.   <br /><br />   Kelipit kisoma or topupok loger lokuwuikinere ng'akiro kon."
