AB#4435 add units.week text

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -91,7 +91,8 @@
           "latest-value": "Latest value"
         },
         "units": {
-          "month": "month"
+          "month": "month",
+          "week": "week"
         },
         "last-updated": "Last updated: {{date}}"
       },
