AB#4369 Refactor payments-page to enable voucher-export in pop-up

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -186,9 +186,11 @@
         "no-checkboxes": "There are currently no People Affected to which this action can be applied.",
         "submit-warning": "You are about to:",
         "submit-warning-people-affected": "People Affected",
-        "transaction-failed": "Transaction failed",
-        "failed": "Failed",
-        "waiting": "Waiting"
+        "transaction": {
+          "failed": "Failed",
+          "waiting": "Waiting",
+          "show-status": "Show status"
+        }
       },
       "program-modal": {
         "pageTitle": "Program JSON"
