--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -91,8 +91,14 @@
           "latest-value": "Latest value"
         },
         "units": {
-          "month": "month",
-          "week": "week"
+          "frequency": {
+            "month": "monthly",
+            "week": "weekly"
+          },
+          "duration": {
+            "month": "month(s)",
+            "week": "week(s)"
+          }
         },
         "last-updated": "Last updated: {{date}}"
       },
