Update translations from Transifex
Related AB#4479
Related AB#4480

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
         "ny_MW": "Chonde sankhani chiyankhulo chanu.",
         "om_ET": "Maaloo qooqa keessan filadhaa.",
         "saq_KE": "Enjere tegelu ng'ituk ino.",
-        "tuv_KE": "Akirimakinit, tetheu akituk kon."
+        "tuv_KE": "Aarimatoi, tetheu akituk kon."
       },
       "result": "Thank you, you have selected {{language}}.",
       "language": {
