--- a/interfaces/PA-App/src/assets/i18n/saq_KE.json
+++ b/interfaces/PA-App/src/assets/i18n/saq_KE.json
@@ -24,7 +24,7 @@
   "personal": {
     "consent-question": {
       "agree": "Atashamaie",
-      "answer": "I soma/aininingwa nekoni lomon lainen teeisudori teserian, kaiyelo ajo, keiyeuni nerewi lomon lainen peiye atum reto ee silingini.   <br><br>   Kaiyelo lutungana loodol lomon lainen.   <br><br>   Tenaiseiye &quot;<b>Atashamaie</b>&quot; a tengelua ajing inia reto.   <br><br>   Teneasei &quot;<b>Masham</b>&quot; a tengelua ajo mayeu najing inia reto. ",
+      "answer": "I soma/aininingwa nekoni lomon lainen teeisudori teserian, kaiyelo ajo, keiyeuni nerewi lomon lainen peiye atum reto ee silingini.   <br><br>   Kaiyelo lutungana loodol lomon lainen.   <br><br>   Tenaiseiye &quot;<b>Atashamaie</b>&quot; a tengelua ajing inia reto.   <br><br>   Teneasei &quot;<b>Masham</b>&quot; a tengelua ajo mayeu najing inia reto.",
       "disagree": "Masham",
       "more-info-personal-information": "Loipirta lomon lainen",
       "question": "Pi iyou ana reto lasima pii eshamaa <strong>ninkinko pii kisudoo lomon linono</strong>.   <br /><br />   Enjere soma tanaa nining'o nikinko tini kisudoo lomon linono"
@@ -40,7 +40,7 @@
         "create-password-only": "Password ino",
         "introduction": "Pii intibir Digital ID ino Keishakino pii idip Kuna oito"
       },
-      "password-too-short": "Tipika nambai nemegiru ongwan",
+      "password-too-short": "Tipika nambai nemegoru {{minimalLength}} ongwan.",
       "unequal-passwords": "Password nintibira menyunyuk. Ngila",
       "username-not-unique": "Ngarna nitipika megol. Ngila",
       "username-password": "Tipika ng'arn inono pooki nitibir password"
@@ -49,7 +49,7 @@
       "change": "Mbelekenya lomon lainen",
       "introduction-information": "Pii itum reto naishakino oo tengoitei naishakino, ikiyeu lomon lekimpirita",
       "more-info-questions": "Loipirta lomon lainen",
-      "please-confirm": "Lokulo lomon linono tene te abori. Ngurai nisei meshomo",
+      "please-confirm": "Lokulo lomon linono tene te abori. Ngurai nisei meshomo.",
       "submit-confirm": "Terewa lomon lainen"
     },
     "handle-proof": {
@@ -74,14 +74,14 @@
     "select-fsp": {
       "attributes": {
         "error": "Keitoki nataroiye. Ng'ila aitoki.",
-        "introduction": "Tana paash tata, keiyeuni kuna",
+        "introduction": "Tana paash tata, keiyeuni kuna:",
         "success": "Ashe. Kintegelita lomon linono."
       },
-      "conclusion": "Ashe. Kitegeluaki '{{name}}'.",
+      "conclusion": "Ashe. Itegelua '{{name}}'.",
       "introduction": "Enjere tegelu nigikunakini ana reto tanaaku igeluno."
     },
     "select-language": {
-      "result": "Ashe. Kitegeluaki '{{language}}'."
+      "result": "Ashe. Itegelua '{{language}}'."
     },
     "select-program": {
       "introduction": "Idim nitumia ana app ayere reto. Enjere nchaguai tene te abori.",
@@ -97,7 +97,7 @@
       "introduction3": "Tanaaku mipik namba ino e simu, tijinga atua ana app pi itumu lkiliku.",
       "introduction4": "Tinikibaki mwisho ya na reto nijut namba ino.",
       "skip": "Terepai",
-      "submit": "Terewa namba we simu",
+      "submit": "Terewa namba e simu",
       "validation": {
         "phone-number": "Etu kitomoki inia amba, ntegejuko nigil aitoki."
       }
