AB#4518 Add explicit error-handling to registration-summary component

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -166,6 +166,7 @@
     "cancel-button": "Cancel",
     "close-button": "Close",
     "more-info": "Read more...",
+    "retry": "Try again",
     "submit-button": "Send"
   },
   "speak-text": {
