AB#4853 add timestamp + cleanup old timestamp

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -201,9 +201,6 @@
       "program-modal": {
         "pageTitle": "Program JSON"
       },
-      "notification": {
-        "timestamp": "Done on:"
-      },
       "export-list": {
         "no-data": "There are currently no People Affected to download",
         "included": {
@@ -232,8 +229,8 @@
         "succes-create": "Succesfully created user with email: '<strong>{{email}}</strong>' and password '<strong>{{password}}</strong>'. Please inform them now of their new account by sending an e-mail."
       },
       "test-payment": {
-        "do-payment": "Test validity of M-PESA phonenumbers",
-        "confirm": "This will test for all provided phonenumbers if they have a valid M-PESA account. The result can be seen in the Inclusion List that can be exported (by the Program Manager)."
+        "do-payment": "Verify M-PESA phonenumbers",
+        "confirm": "This will test for all provided phonenumbers if they have a valid M-PESA account. The result can be seen in the exported Inclusion List."
       }
     },
     "help": {
@@ -255,7 +252,10 @@
     "cancel": "Cancel",
     "ok": "OK",
     "export-error": "Something went wrong with the export.",
-    "unknown-error": "Something went wrong. Error is unknown."
+    "unknown-error": "Something went wrong. Error is unknown.",
+    "timestamp": {
+      "done": "Done on:"
+    }
   },
   "password-toggle": {
     "show": "Show password",
