--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -201,10 +201,8 @@
       "program-modal": {
         "pageTitle": "Program JSON"
       },
-      "notification": {
-        "timestamp": "Done on:"
-      },
       "export-list": {
+        "timestamp": "Latest export has been done on: ",
         "no-data": "There are currently no People Affected to download",
         "included": {
           "btn-text": "Export inclusion list",
