feat: remove help page add contact/whatsapp icons AB#4353

--- a/interfaces/Referral-App/src/assets/i18n/en.json
+++ b/interfaces/Referral-App/src/assets/i18n/en.json
@@ -1,7 +1,5 @@
 {
   "tabs": {
-    "user": "Person Affected",
-    "referral-title": "Community Offers",
-    "referral-help-title": "Ask for Help"
+    "user": "Person Affected"
   }
 }
