--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -208,7 +208,7 @@
         "pageTitle": "Program JSON"
       },
       "export-list": {
-        "timestamp": "Latest export has been done on: ",
+        "timestamp": "Latest export has been done on: {{dateTime}}",
         "no-data": "There are currently no People Affected to download",
         "included": {
           "btn-text": "Export inclusion list",
