AB#5037 Add WhatsAppPhoneNumber-column for PM (when available)

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -172,6 +172,7 @@
           "phone-number": "Phonenumber",
           "payment": "Payment #",
           "vnumber": "V-number",
+          "whatsappPhoneNumber": "WhatsApp nr.",
           "fsp": "Financial Service Provider"
         },
         "status": {
