--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "_dir": "ltr",
   "account": {
     "change-password": "Change password",
     "delete-account-header": "Enter your password if you are sure you want to delete your account",
